fix: add chat participants entity